# miniature-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: app.rs  args.rs  bootstrap.rs  compaction.rs  config.rs  interactive.rs  main.rs  non_interactive.rs  paths.rs  provider_registry.rs  runtime.rs  session_ui.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-model/: Cargo.toml
crates/agent-model/src/: anthropic.rs  backend.rs  chat_completions.rs  lib.rs  openai.rs
crates/agent-model/tests/fixtures/: error.sse  multi_tool_calls.sse  reasoning_content_field.sse  reasoning_field.sse  tool_calls_finish_reason.sse
crates/agent-session/: Cargo.toml
crates/agent-session/src/: lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
crates/agent-tui/: Cargo.toml
crates/agent-tui/src/: bottom_pane.rs  conversation.rs  lib.rs
docs/: project-scope.md  tui-model-redesign.md  v1-release-checklist.md
