[workspace]
members = [
    "crates/agent-model",
    "crates/agent-core",
    "crates/agent-session",
    "crates/agent-tui",
    "crates/agent-tools",
    "crates/agent-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
crossterm = "0.29.0"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
schemars = "1.0.4"
toml = "0.8.23"
unicode-width = "0.2.0"
