[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-model = { path = "../agent-model" }
agent-tools = { path = "../agent-tools" }
anyhow.workspace = true
futures.workspace = true
secrecy.workspace = true
serde.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
