[package]
name = "agent-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-model = { path = "../agent-model" }
agent-core = { path = "../agent-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
time.workspace = true
uuid.workspace = true
